objects/AccountOwners__c.object
<CustomObject>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountOwnerByShows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountOwnerByShows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNamedAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pavilion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pavilion</label>
        <referenceTo>Pavilion__c</referenceTo>
        <relationshipLabel>Account Owners</relationshipLabel>
        <relationshipName>Account_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipName>AccountOwnerByShows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubExpo</label>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>Account Owners</relationshipLabel>
        <relationshipName>Account_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubShow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SubShow</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubShow__c.Show__c</field>
                <operation>equals</operation>
                <valueField>$Source.Show__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubShow__c</referenceTo>
        <relationshipLabel>Account Owners</relationshipLabel>
        <relationshipName>AccountOwnerByShows</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Owner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>AccountOwner__c</columns>
        <columns>IsNamedAccount__c</columns>
        <columns>Pavilion__c</columns>
        <columns>Show__c</columns>
        <columns>SubExpo__c</columns>
        <columns>SubShow__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>AccountOwnerByShow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>